[package]
name = "pynexrad"
version = "0.0.29"
edition = "2021"
resolver = "2"

[dependencies]
pyo3 = "0.19.0"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
uom = { version = "0.36.0"}
nexrad-data = { version = "0.2.0" }
nexrad-decode = { version = "0.1.1" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
nannou = "0.19.0"
image = "0.25.1"
