[package]
name = "pynexrad"
version = "0.0.30"
edition = "2021"
resolver = "2"

[dependencies]
pyo3 = "0.19.0"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
uom = { version = "0.36.0"}
nexrad-data = { git = "https://github.com/danielway/nexrad.git", rev = "366395d14555459f8f57d964c0890aa59ecfcb51" }
nexrad-decode = { git = "https://github.com/danielway/nexrad.git", rev = "366395d14555459f8f57d964c0890aa59ecfcb51" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
nannou = "0.19.0"
image = "0.25.1"
